[package]
name = "async-injector"
version = "0.18.5"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
rust-version = "1.56"
description = "Reactive dependency injection for Rust."
documentation = "https://docs.rs/async-injector"
readme = "README.md"
homepage = "https://github.com/udoprog/async-injector"
repository = "https://github.com/udoprog/async-injector"
license = "MIT/Apache-2.0"
keywords = ["async", "di"]
categories = ["asynchronous"]

[dependencies]
async-injector-derive = { version = "=0.18.5", path = "async-injector-derive" }

hashbrown = "0.11.2"
serde = { version = "1.0.130", features = ["derive"] }
serde-hashkey = "0.4.0"
tokio = { version = "1.10.1", features = ["sync", "macros"] }

[dev-dependencies]
anyhow = "1.0.43"
tokio = { version = "1.10.1", features = ["rt", "rt-multi-thread", "time"] }

[workspace]
members = [
    "async-injector-derive"
]
