[package]
name = "async-injector"
version = "0.19.4"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
rust-version = "1.70"
description = "Reactive dependency injection for Rust."
documentation = "https://docs.rs/async-injector"
readme = "README.md"
homepage = "https://github.com/udoprog/async-injector"
repository = "https://github.com/udoprog/async-injector"
license = "MIT OR Apache-2.0"
keywords = ["async", "di"]
categories = ["asynchronous"]

[dependencies]
async-injector-derive = { version = "=0.19.4", path = "async-injector-derive" }

hashbrown = { version = "0.16.0", default-features = false, features = ["default-hasher"] }
serde = { version = "1.0.160", default-features = false, features = ["derive"] }
serde-hashkey = "0.4.5"
tokio = { version = "1.27.0", default-features = false, features = ["sync", "macros"] }

[dev-dependencies]
anyhow = "1.0.70"
tokio = { version = "1.27.0", features = ["rt", "rt-multi-thread", "time"] }

[workspace]
members = [
    "async-injector-derive"
]
