[package]
name = "async-injector-derive"
version = "0.18.5"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
rust-version = "1.56"
description = """
A derive to help construct dependent values in async-injector.
"""
documentation = "https://docs.rs/async-injector"
readme = "README.md"
homepage = "https://github.com/udoprog/async-injector"
repository = "https://github.com/udoprog/async-injector"
license = "MIT/Apache-2.0"
keywords = ["async", "di"]
categories = ["asynchronous"]

[dependencies]
darling = "0.13.0"
proc-macro2 = "1.0.28"
quote = "1.0.9"
syn = { version = "1.0.75", features = ["full", "visit-mut"] }

[dev-dependencies]
async-injector = { version = "=0.18.5", path = ".." }

serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.10.1", features = ["rt", "rt-multi-thread", "sync", "macros"] }
tokio-stream = "0.1.7"

[lib]
proc-macro = true
