[package]
name = "async-injector-derive"
version = "0.19.1"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
rust-version = "1.65"
description = """
A derive to help construct dependent values in async-injector.
"""
documentation = "https://docs.rs/async-injector"
readme = "README.md"
homepage = "https://github.com/udoprog/async-injector"
repository = "https://github.com/udoprog/async-injector"
license = "MIT/Apache-2.0"
keywords = ["async", "di"]
categories = ["asynchronous"]

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "2.0.15", features = ["full", "visit-mut"] }

[dev-dependencies]
async-injector = { version = "=0.19.1", path = ".." }

serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["rt", "rt-multi-thread", "sync", "macros"] }
tokio-stream = "0.1.12"

[lib]
proc-macro = true
