[package]
name = "async-injector-derive"
version = "0.19.3"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
rust-version = "1.65"
description = """
A derive to help construct dependent values in async-injector.
"""
documentation = "https://docs.rs/async-injector"
readme = "README.md"
homepage = "https://github.com/udoprog/async-injector"
repository = "https://github.com/udoprog/async-injector"
license = "MIT OR Apache-2.0"
keywords = ["async", "di"]
categories = ["asynchronous"]

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "2.0.15", features = ["full", "visit-mut"] }

[lib]
proc-macro = true
