[package]
name = "async-injector"
version = "0.1.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/udoprog/async-injector"
homepage = "https://github.com/udoprog/async-injector"
documentation = "https://docs.rs/async-injector"

[dependencies]
parking_lot = "0.9.0"
hashbrown = "0.5.0"
smallvec = "0.6.10"
log = "0.4.7"
pin-utils = "0.1.0-alpha.4"

[dependencies.futures]
package = "futures-preview"
version = "0.3.0-alpha.17"
features = ["nightly", "async-await"]